--- a/notebooks/Excercise_#1.ipynb
+++ b/notebooks/Excercise_#1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "57b760e8",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "ea5466f4",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "370d6ebb",
    "metadata": {},
    "outputs": [
@@ -4696,7 +4696,7 @@
          "type": "float"
         }
        ],
-       "ref": "fccd424b-e887-4238-b822-33e4a827ea6b",
+       "ref": "fe7ed286-96cd-4edd-9daa-5a5a0d95e776",
        "rows": [
         [
          "P1_A10",
@@ -51485,7 +51485,7 @@
        "[1273 rows x 925 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51620,19 +51620,413 @@
    "id": "0882d935",
    "metadata": {},
    "source": [
-    "1. manipulate data: bring to long format"
+    "Use only first 3 proteins for comparison:\n",
+    "1. manipulate data: bring to long format "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
+   "id": "dc01f784",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "variable",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "value",
+         "rawType": "object",
+         "type": "unknown"
+        }
+       ],
+       "ref": "cc77d0f5-be24-4a77-80ad-3cdc3e4b2a65",
+       "rows": [
+        [
+         "0",
+         "index",
+         "P1_A10"
+        ],
+        [
+         "1",
+         "index",
+         "P1_A11"
+        ],
+        [
+         "2",
+         "index",
+         "P1_A12"
+        ],
+        [
+         "3",
+         "index",
+         "P1_A01"
+        ],
+        [
+         "4",
+         "index",
+         "P1_A02"
+        ],
+        [
+         "5",
+         "index",
+         "P1_A03"
+        ],
+        [
+         "6",
+         "index",
+         "P1_A04"
+        ],
+        [
+         "7",
+         "index",
+         "P1_A05"
+        ],
+        [
+         "8",
+         "index",
+         "P1_A06"
+        ],
+        [
+         "9",
+         "index",
+         "P1_A07"
+        ],
+        [
+         "10",
+         "index",
+         "P1_A08"
+        ],
+        [
+         "11",
+         "index",
+         "P1_A09"
+        ],
+        [
+         "12",
+         "index",
+         "P1_B10"
+        ],
+        [
+         "13",
+         "index",
+         "P1_B11"
+        ],
+        [
+         "14",
+         "index",
+         "P1_B12"
+        ],
+        [
+         "15",
+         "index",
+         "P1_B01"
+        ],
+        [
+         "16",
+         "index",
+         "P1_B02"
+        ],
+        [
+         "17",
+         "index",
+         "P1_B03"
+        ],
+        [
+         "18",
+         "index",
+         "P1_B04"
+        ],
+        [
+         "19",
+         "index",
+         "P1_B05"
+        ],
+        [
+         "20",
+         "index",
+         "P1_B06"
+        ],
+        [
+         "21",
+         "index",
+         "P1_B07"
+        ],
+        [
+         "22",
+         "index",
+         "P1_B08"
+        ],
+        [
+         "23",
+         "index",
+         "P1_B09"
+        ],
+        [
+         "24",
+         "index",
+         "P1_C10"
+        ],
+        [
+         "25",
+         "index",
+         "P1_C11"
+        ],
+        [
+         "26",
+         "index",
+         "P1_C12"
+        ],
+        [
+         "27",
+         "index",
+         "P1_C01"
+        ],
+        [
+         "28",
+         "index",
+         "P1_C02"
+        ],
+        [
+         "29",
+         "index",
+         "P1_C03"
+        ],
+        [
+         "30",
+         "index",
+         "P1_C04"
+        ],
+        [
+         "31",
+         "index",
+         "P1_C05"
+        ],
+        [
+         "32",
+         "index",
+         "P1_C06"
+        ],
+        [
+         "33",
+         "index",
+         "P1_C07"
+        ],
+        [
+         "34",
+         "index",
+         "P1_C08"
+        ],
+        [
+         "35",
+         "index",
+         "P1_C09"
+        ],
+        [
+         "36",
+         "index",
+         "P1_D10"
+        ],
+        [
+         "37",
+         "index",
+         "P1_D11"
+        ],
+        [
+         "38",
+         "index",
+         "P1_D12"
+        ],
+        [
+         "39",
+         "index",
+         "P1_D01"
+        ],
+        [
+         "40",
+         "index",
+         "P1_D02"
+        ],
+        [
+         "41",
+         "index",
+         "P1_D03"
+        ],
+        [
+         "42",
+         "index",
+         "P1_D04"
+        ],
+        [
+         "43",
+         "index",
+         "P1_D05"
+        ],
+        [
+         "44",
+         "index",
+         "P1_D06"
+        ],
+        [
+         "45",
+         "index",
+         "P1_D07"
+        ],
+        [
+         "46",
+         "index",
+         "P1_D08"
+        ],
+        [
+         "47",
+         "index",
+         "P1_D09"
+        ],
+        [
+         "48",
+         "index",
+         "P1_E10"
+        ],
+        [
+         "49",
+         "index",
+         "P1_E11"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 5092
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>variable</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>index</td>\n",
+       "      <td>P1_A10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>index</td>\n",
+       "      <td>P1_A11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>index</td>\n",
+       "      <td>P1_A12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>index</td>\n",
+       "      <td>P1_A01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>index</td>\n",
+       "      <td>P1_A02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5087</th>\n",
+       "      <td>A0A075B6I0</td>\n",
+       "      <td>5.303552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5088</th>\n",
+       "      <td>A0A075B6I0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5089</th>\n",
+       "      <td>A0A075B6I0</td>\n",
+       "      <td>5.049964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5090</th>\n",
+       "      <td>A0A075B6I0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5091</th>\n",
+       "      <td>A0A075B6I0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5092 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        variable     value\n",
+       "0          index    P1_A10\n",
+       "1          index    P1_A11\n",
+       "2          index    P1_A12\n",
+       "3          index    P1_A01\n",
+       "4          index    P1_A02\n",
+       "...          ...       ...\n",
+       "5087  A0A075B6I0  5.303552\n",
+       "5088  A0A075B6I0       NaN\n",
+       "5089  A0A075B6I0  5.049964\n",
+       "5090  A0A075B6I0       NaN\n",
+       "5091  A0A075B6I0       NaN\n",
+       "\n",
+       "[5092 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[:,:3].reset_index().melt()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2bc2dde5",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_long = df.iloc[:,:3].reset_index().melt(\n",
-    "    id_vars=['index'], var_name='variable', value_name='value'\n",
-    "    )"
+    "    id_vars=['index'], var_name='variable', value_name='value')"
    ]
   },
   {
@@ -52156,17 +52550,68 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(6, 4))\n",
-    "sns.boxplot(df_long, y='value', hue='variable')\n",
-    "plt.title('Boxplot of first 3 proteins')\n",
-    "plt.ylabel('Protein Expression Level')\n",
-    "plt.xlabel('Protein')\n",
-    "plt.show()"
+    "... your code here ..."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "035f6cc8",
+   "id": "590bf3cc",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "daa841ef",
+   "metadata": {},
+   "source": [
+    "boxplot for the first 10 proteins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad7a338f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "... your code here ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16cd59a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45836f9c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24965ce2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cc04838",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68a6d70e",
    "metadata": {},
    "source": [
     "change style with a little help..."
@@ -52174,8 +52619,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "6dd28824",
+   "execution_count": null,
+   "id": "1c0923c5",
    "metadata": {},
    "outputs": [
     {
@@ -52203,6 +52648,7 @@
     }
    ],
    "source": [
+    "'''\n",
     "# Optional: Set style and palette similar to the image\n",
     "sns.set(style=\"whitegrid\")\n",
     "palette = [\"#56B4AE\", \"#B24747\", \"#56B4AE\", \"#56B4AE\"]  # Custom colors, adjust as needed\n",
@@ -52240,16 +52686,9 @@
     "plt.ylabel('Protein Expression Level')\n",
     "plt.xlabel('Protein')\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "'''"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ad7a338f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
